--- a/login.html
+++ b/login.html
@@ -27,13 +27,13 @@ if(process.platform != 'darwin') {
 	</div>
 
 	<div class="bottom">
-		<a id="localAccount" onclick="openExternal('https://leanote.com/register')"  class="lang localAccount">Sign up Leanote</a>
+		<a id="localAccount" onclick="openExternal('https://leanote.com/register')"  class="lang localAccount">Регистрация в Leanote</a>
 
-		<a id="customServer" class="lang customServer">Sign in to Self-hosted Service</a>
+		<a id="customServer" class="lang customServer">Вход в собственный сервис</a>
 
 		<!-- <a id="localAccount" class="lang localAccount">Create Local Account</a> -->
 
-		<a id="loginWithLeanote" class="lang loginWithLeanote">Sign in to Leanote</a>
+		<a id="loginWithLeanote" class="lang loginWithLeanote">Вход в Leanote</a>
 	</div>
 
 	<section id="box">
@@ -44,7 +44,7 @@ if(process.platform != 'darwin') {
 				<a onclick="openExternal('https://leanote.com')" id="loadingLogo" title="leanote">
 					<span class="logo"></span>
 				</a>
-				<span class="lang customServer">Self-hosted Service</span>
+				<span class="lang customServer">Собственный сервис</span>
 			</h1>
 
 			<div class="alert-wrap">
@@ -57,13 +57,13 @@ if(process.platform != 'darwin') {
 				<form>
 					<div class="formContainer">
 						<div class="form-group form-group-1">
-							<input type="text" required placeholder="Username" class="form-control lang-placeholder" id="username" name="username" value="">
+							<input type="text" required placeholder="Имя пользователя" class="form-control lang-placeholder" id="username" name="username" value="">
 						</div>
 						<div class="form-group form-group-1">
-							<input type="password" required placeholder="Password" class="form-control lang-placeholder" id="pwd1" name="pwd1">
+							<input type="password" required placeholder="Пароль" class="form-control lang-placeholder" id="pwd1" name="pwd1">
 						</div>
 						<div class="form-group pwd-group">
-							<input type="password" required placeholder="Confirm password" class="form-control lang-placeholder" id="pwd2" name="pwd2">
+							<input type="password" required placeholder="Повторите пароль" class="form-control lang-placeholder" id="pwd2" name="pwd2">
 							<button id="regBtn" class="btn-embeded" disabled>
 								<i class="btn-go fa fa-arrow-right"></i>
 								<i class="btn-loading"><img src="public/images/loading-24.gif"/></i>
@@ -82,10 +82,10 @@ if(process.platform != 'darwin') {
 						</div>
 
 						<div class="form-group form-group-1">
-							<input type="text" placeholder="Username or Email" class="form-control lang-placeholder" id="email" name="email" value="">
+							<input type="text" placeholder="Имя пользователя или Email" class="form-control lang-placeholder" id="email" name="email" value="">
 						</div>
 						<div class="form-group pwd-group">
-						    <input type="password" placeholder="Password" class="form-control lang-placeholder" id="pwd" name="pwd">
+						    <input type="password" placeholder="Пароль" class="form-control lang-placeholder" id="pwd" name="pwd">
 						    <button id="loginBtn" class="btn-embeded" disabled>
 						    	<i class="btn-go fa fa-arrow-right"></i>
 						    	<i class="btn-loading"><img src="public/images/loading-24.gif"/></i>
@@ -94,7 +94,7 @@ if(process.platform != 'darwin') {
 					</div>
 
 					<div class="clearfix btns">
-						<a onclick="openExternal('https://leanote.com/findPassword')" class="pull-right m-t-xs"><small class="lang">Forget password?</small></a>
+						<a onclick="openExternal('https://leanote.com/findPassword')" class="pull-right m-t-xs"><small class="lang">Забыли пароль?</small></a>
 						<!--
 						<a onclick="openExternal('https://leanote.com/register')" class="pull-right m-t-xs" style="margin-right: 10px"><small class="lang">Sign up</small></a>
 						-->
