--- a/note.html
+++ b/note.html
@@ -8,7 +8,7 @@
 <meta name=”apple-mobile-web-app-capable” content=”yes” />
 <meta name="keywords" content="leanote,leanote.com">
 <meta name="description" content="leanote, Not Just A Notepad!">
-<title class="lang">Leanote, Not Just A Notepad</title>
+<title class="lang">Leanote, не просто блокнот</title>
 
 <link href="public/css-libs/bootstrap.css" rel="stylesheet" />
 <!-- 先加载, 没有样式, 宽度不定 -->
@@ -79,13 +79,13 @@ function log(o) {
           <span class="logo"></span>
         </div>
         <div class="init-loading"><img src="public/images/loading-32.gif"></div>
-        <div id="allProcess" class="lang">loading...</div>
+        <div id="allProcess" class="lang">Загрузка...</div>
         <div id="syncProcess">
         </div>
       </td></tr></table>
 
       <div class="loading-footer">
-        <a onclick="switchAccount()" class="lang">Switch account</a>
+        <a onclick="switchAccount()" class="lang">Переключить аккаунт</a>
       </div>
     </div>
 
@@ -100,11 +100,11 @@ function log(o) {
           <div id="newSharedNote" style="display: none">
             <a id="newSharedNoteBtn">
               <i class="fa fa-file-o"></i>
-              <span class="new-note-text lang">New note</span>
-              <span class="new-note-text-abbr lang">New</span>
+              <span class="new-note-text lang">Новая заметка</span>
+              <span class="new-note-text-abbr lang">Новая</span>
             </a>
             <span class="new-split">|</span>
-            <a id="newShareNoteMarkdownBtn" title="New markdown note">
+            <a id="newShareNoteMarkdownBtn" title="Новая заметка markdown">
               <span class="new-markdown-text">Markdown</span>
               <span class="new-markdown-text-abbr">Md</span>
             </a>
@@ -129,7 +129,7 @@ function log(o) {
 
         <div class="pull-right top-nav writting-hide" id="myBlog">
           <a target="_blank" href="{{$.blogUrl}}/{{.userInfo.Username}}" class="lang">
-            Blog
+            Блог
           </a>
         </div>
 
@@ -160,13 +160,13 @@ function log(o) {
                 <span class="pull-left lang">
                   Notebook
                 </span>
-                <div class="pull-right" id="addNotebookPlus" title="Add notebook">
-                  <i class="fa  fa-plus" title="Add notebook"></i>
+                <div class="pull-right" id="addNotebookPlus" title="Добавить блокнот">
+                  <i class="fa  fa-plus" title="Добавить блокнот"></i>
                 </div>
               </div>
 
               <div class="folderBody">
-                <input type="text" class="form-control lang-placeholder" id="searchNotebookForList" placeholder="Search notebook"/>
+                <input type="text" class="form-control lang-placeholder" id="searchNotebookForList" placeholder="Поиск блокнота"/>
                 <ul class="ztree" id="notebookList"></ul>
                 <ul class="ztree" id="notebookListForSearch"></ul>
               </div>
@@ -197,8 +197,8 @@ function log(o) {
             </div>
             <!--  fa-spin -->
             <a class="pull-left sync-icon">
-              <i class="fa fa-refresh" id="syncRefresh" title="Sync"></i>
-              <i class="fa fa-exclamation-triangle" id="syncWarning" title="Sync error!!"></i>
+              <i class="fa fa-refresh" id="syncRefresh" title="Синхронизировать"></i>
+              <i class="fa fa-exclamation-triangle" id="syncWarning" title="Ошибка синхронизации!!"></i>
             </a>
             <div class="pull-right" id="myProfile">
               <div class="dropdown">
@@ -218,7 +218,7 @@ function log(o) {
           <div id="noteAndEditorMask">
             <img src="public/images/loading-24.gif"/>
             <br />
-            <span class="lang">loading</span>...
+            <span class="lang">Загрузка</span>...
           </div>
 
           <div id="noteList">
@@ -233,16 +233,16 @@ function log(o) {
               </div>
 
               <div id="viewModeDropdown">
-                <span class="fa fa-th-list" title="Switch view"></span>                
+                <span class="fa fa-th-list" title="Переключить вид"></span>                
               </div>
 
               <div id="newMyNote">
-                <a id="newNoteBtn" title="New note">
-                  <span class="new-note-text"  title="New note">+</span>
+                <a id="newNoteBtn" title="Новая заметка">
+                  <span class="new-note-text"  title="Новая заметка">+</span>
                 </a>
                 <span class="new-split">|</span>
-                <a id="newNoteMarkdownBtn" title="New markdown note">
-                  <span class="new-markdown-text" title="New markdown note">+M</span>
+                <a id="newNoteMarkdownBtn" title="Новая заметка markdown">
+                  <span class="new-markdown-text" title="Новая заметка markdown">+M</span>
                 </a>
                 <span id="curNotebookForNewNote" notebookId="" style="display: none"></span>
               </div>
@@ -251,7 +251,7 @@ function log(o) {
 
           <!-- 搜索 -->
           <form class="navbar-form form-inline" id="searchNote" onsubmit="return false;">
-            <input class="form-control lang-placeholder" placeholder="Search note" type="text" id="searchNoteInput">
+            <input class="form-control lang-placeholder" placeholder="Поиск заметок" type="text" id="searchNoteInput">
           </form>
 
           <!-- 笔记列表 -->
@@ -272,7 +272,7 @@ function log(o) {
           <div id="noteMaskForLoading" class="note-mask"> <!-- z-index: 11 -->
             <img src="public/images/loading-24.gif"/>
             <br />
-            <span class="lang">loading...</span>
+            <span class="lang">Загрузка...</span>
           </div>
 
           <div id="editorMask">  <!-- z-index: 10 -->
@@ -305,12 +305,12 @@ function log(o) {
               <ul class="pull-right" id="editorTool">
 
                 <li><a class="ios7-a lang-title lang-title" id="editBtn"
-                  data-toggle="dropdown" title="ctrl/cmd+e Toggle Modify with Readonly">
+                  data-toggle="dropdown" title="ctrl/cmd+e Переключение режима чтение/запись">
                   <span class="fa"></span>
                   </a></li>
 
                 <li class="dropdown" id="attachDropdown">
-                  <a class="ios7-a dropdown-toggle lang-title" data-toggle="dropdown" id="showAttach" title="Attachments">
+                  <a class="ios7-a dropdown-toggle lang-title" data-toggle="dropdown" id="showAttach" title="Вложения">
                     <span class="fa fa-paperclip"></span>
                     <span id="attachNum"></span>
                   </a>
@@ -324,7 +324,7 @@ function log(o) {
 
                             <a id="chooseFile" class="btn btn-success btn-choose-file">
                               <i class="fa fa-upload"></i>
-                              <span class="lang">Choose Files</span>
+                              <span class="lang">Выбрать файлы</span>
                             </a>
 
                         </div>
@@ -335,12 +335,12 @@ function log(o) {
                 </li>
 
                 <li><a class="ios7-a lang-title" id="contentHistory"
-                  data-toggle="dropdown" title="Histories">
+                  data-toggle="dropdown" title="Версии">
                   <span class="fa fa-history"></span>
                   </a></li>
 
                   <li><a class="ios7-a lang-title" id="writtingToggle"
-                  data-toggle="dropdown" title="Toggle writting mode">
+                  data-toggle="dropdown" title="Переключить режим редактора">
                   <span class="fa fa-expand"></span>
                   </a></li>
               </ul>
@@ -361,16 +361,16 @@ function log(o) {
               <!-- 查看信息 -->
               <div id="infoToolbar" class="info-toolbar">
 
-                <span class="lang">Created</span>: <span class="created-time">2015-04-03</span>
-                <span class="lang">Updated</span>: <span class="updated-time">2015-05-01</span>
+                <span class="lang">Создано</span>: <span class="created-time">2015-04-03</span>
+                <span class="lang">Изменено</span>: <span class="updated-time">2015-05-01</span>
               </div>
             </div>
 
             <div class="editorBg"></div>
             <div id="leanoteNav" class="leanoteNav">
               <h1>
-                <i class="fa fa-align-justify" title="Note nav"></i>
-                <span class="lang">nav</span>
+                <i class="fa fa-align-justify" title="Навигация"></i>
+                <span class="lang">Навигация</span>
               </h1>
               <div id="leanoteNavContent" class="leanoteNavContent">
               </div>
@@ -379,7 +379,7 @@ function log(o) {
             <!-- leaui image drop image to editor-->
             <form id="upload" method="post" action="/file/uploadImageLeaui" enctype="multipart/form-data" style="margin-top: 5px;">
                 <div id="drop">
-                       Drop images to here
+                       Перетащите изображение сюда
                     <input type="file" name="file" multiple style="display: none"/>
                 </div>
                 <ul id="uploadMsg">
@@ -389,7 +389,7 @@ function log(o) {
             <!-- 由此可以算高度 -->
             <div id="editorContentWrap">
               <div id="editorContent" name="editorContent" tabindex="2" >
-                Loading...
+                Загрузка...
               </div>
             </div>
           </div>
@@ -402,8 +402,8 @@ function log(o) {
                         <div class="navbar-inner" id="wmd-button-bar">
                             <div id="mdInfoToolbar" class="info-toolbar">
 
-                              <span class="lang">Created</span>: <span class="created-time">2015-04-03</span>
-                              <span class="lang">Updated</span>: <span class="updated-time">2015-05-01</span>
+                              <span class="lang">Создано</span>: <span class="created-time">2015-04-03</span>
+                              <span class="lang">Изменено</span>: <span class="updated-time">2015-05-01</span>
                             </div>
                             <div class="wmd-button-bar-inner">
                               <ul class="nav left-buttons">
@@ -421,7 +421,7 @@ function log(o) {
                               <!-- 帮助 -->
                                <ul class="nav left-buttons">
                                   <li class="wmd-button-group6 btn-group">
-                                    <li class="wmd-button btn btn-success" id="wmd-help-button" title="Markdown syntax" style="left: 0px; display: none;"><span style="display: none; background-position: 0px 0px;"></span><i class="fa fa-question-circle"></i></li>
+                                    <li class="wmd-button btn btn-success" id="wmd-help-button" title="Синтаксис Markdown" style="left: 0px; display: none;"><span style="display: none; background-position: 0px 0px;"></span><i class="fa fa-question-circle"></i></li>
                                   </li>
                               </ul>
                             </div>
@@ -437,7 +437,7 @@ function log(o) {
                         <div id="right-column">
                           <div class="preview-panel panel-open" id="preview-panel">
                             <div id="mdSplitter2" class="layout-resizer layout-resizer-preview open" style="-webkit-user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); touch-action: none;"></div>
-                              <div class="layout-toggler layout-toggler-preview btn btn-info open" title="Toggle preview" data-open="1"><i class="fa fa-angle-right"></i></div>
+                              <div class="layout-toggler layout-toggler-preview btn btn-info open" title="Переключить вид" data-open="1"><i class="fa fa-angle-right"></i></div>
                               <div class="preview-container">
                                   <div id="preview-contents">
                                       <div id="wmd-preview" class="preview-content"></div>
@@ -449,8 +449,8 @@ function log(o) {
                     <div class="extension-preview-buttons">
                   <div id="leanoteNavMd" class="leanoteNav">
                     <h1>
-                      <i class="fa fa-align-justify" title="Note nav"></i>
-                      <span class="lang">nav</span>
+                      <i class="fa fa-align-justify" title="Навигация"></i>
+                      <span class="lang">Навигация</span>
                     </h1>
                     <div id="leanoteNavContentMd" class="leanoteNavContent table-of-contents">
                     </div>
@@ -501,8 +501,8 @@ function log(o) {
               </div>
 
               <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-primary" id="editorDialog-confirm">confirm</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Отмена</button>
+                <button type="button" class="btn btn-primary" id="editorDialog-confirm">OK</button>
               </div>
 
             </div><!-- /.modal-content -->
@@ -526,8 +526,8 @@ function log(o) {
             </div>
 
             <div class="modal-footer">
-              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Save changes</button>
+              <button type="button" class="btn btn-default" data-dismiss="modal">Закрыть</button>
+              <button type="button" class="btn btn-primary">Сохранить изменения</button>
             </div>
 
           </div><!-- /.modal-content -->
@@ -540,13 +540,13 @@ function log(o) {
           <div class="modal-content">
           <div class="modal-header">
               <!-- <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button> -->
-              <h4 class="modal-title modalTitle lang">Check for updates</h4>
+              <h4 class="modal-title modalTitle lang">Проверка обновлений</h4>
           </div>
           <div class="modal-body" id="upgradeDialogBody">
-            <div class="cur-version-info"><span class="lang">Current version</span>: <span class="cur-version"></span></div>
+            <div class="cur-version-info"><span class="lang">Текущая версия</span>: <span class="cur-version"></span></div>
 
             <div class="get-next-version-info-loading lang">
-              Checking for udpates...
+              Проверка обновлений...
             </div>
 
             <!-- 下一版本信息 -->
@@ -557,8 +557,8 @@ function log(o) {
             </div>
           </div>
           <div class="modal-footer ">
-            <button type="button" class="btn btn-default upgrade-cancel-btn lang" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary upgrade-btn lang" data-dismiss="modal" disabled>Upgrade</button>
+            <button type="button" class="btn btn-default upgrade-cancel-btn lang" data-dismiss="modal">Закрыть</button>
+            <button type="button" class="btn btn-primary upgrade-btn lang" data-dismiss="modal" disabled>Обновить</button>
           </div>
 
           </div><!-- /.modal-content -->
@@ -571,12 +571,12 @@ function log(o) {
           <div class="modal-content">
           <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-              <h4 class="modal-title modalTitle lang">Local account warning</h4>
+              <h4 class="modal-title modalTitle lang">Предупреждение</h4>
           </div>
           <div class="modal-body lang">localAccountTips</div>
           <div class="modal-footer ">
-            <label><input type="checkbox" id="localAccountDialogCheckbox"/> <span class="lang">Don't Show Anymore</span></label>
-            <button type="button" class="btn btn-default upgrade-cancel-btn lang" data-dismiss="modal">Close</button>
+            <label><input type="checkbox" id="localAccountDialogCheckbox"/> <span class="lang">Больше не показывать</span></label>
+            <button type="button" class="btn btn-default upgrade-cancel-btn lang" data-dismiss="modal">Закрыть</button>
           </div>
 
           </div><!-- /.modal-content -->
@@ -596,7 +596,7 @@ function log(o) {
 
             <div class="progress">
               <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-                <span class="sr-only">60% Complete</span>
+                <span class="sr-only">60% выполнено</span>
               </div>
               <div class="progress-rate"></div>
             </div>
@@ -610,7 +610,7 @@ function log(o) {
       <div id="notify">
         <div class="alert alert-dismissible alert-warning" role="alert">
           <button type="button" class="close" ><span aria-hidden="true">&times;</span></button>
-          <strong class="title">Warning!</strong>:
+          <strong class="title">Внимание!</strong>:
           <span class="body">Better check yourself, you're not looking too good.</span>
       </div>
       </div>
@@ -628,14 +628,14 @@ function log(o) {
 <!-- contextTips -->
 <div class="context-tips" id="conflictTips">
   <p class="lang">
-    This note is conflicted with:
+    Эта заметка конфликтует с:
   </p>
   <p>
     <a class="conflict-title">
     </a>
   </p>
-  <span class="lang">Maker as resolved</span>: <input type="checkbox" class="conflict-resolved"/>
-  <p class="lang">It will not be synced before fixed.</p>
+  <span class="lang">Пометить как разрешенное</span>: <input type="checkbox" class="conflict-resolved"/>
+  <p class="lang">Она не будет синхронизирована до исправления.</p>
 </div>
 
 <script src="public/js/jquery-1.9.0.min.js"></script>
